fix: main Layout gap

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -66,7 +66,7 @@ strong {
 main {
   display: flex;
   flex-direction: column;
-  gap: var(--sp-content);
+  gap: calc(var(--sp-content) + var(--sp));
   max-width: var(--layout-max-width);
   padding-block: var(--sp-l);
   margin-inline: auto;
